welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: ';' expected but ')' found.
     if(isFacingTrail(c)){avance)}
                                ^